# Slack-Bot

./: .gitignore  ITC-LMS.py  LMS.py  main.py  mise.toml  pm2.config.json  pyproject.toml  requirements.txt  run.sh  status.py
.github/workflows/: deploy.yml  lint.yml
src/: LMS.py  MF.py  UTOL.py  api.py  expo.py  main.py  video-backup.py
src/expo/: data_fetcher.py  data_manager.py  enter_reserve.py  main.py  watched_pavilions.py
